--- a/app/package.json
+++ b/app/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.0",
     "bootstrap": "^4.6.0",
+    "dotenv": "^8.2.0",
     "google-maps-react": "^2.0.6",
     "hamburger-react": "^2.4.0",
     "jquery": "^3.6.0",
